--- a/group.html
+++ b/group.html
@@ -5,9 +5,9 @@
 <meta charset="utf-8" />
 <meta  name="viewport" content="width=device-width,initial-scale=1.0">
 <link href="style/bootstrap.css"  rel="stylesheet"/>
-
 <link href="style/bootstrap-theme.css"  rel="stylesheet"/>
 <link href="style/mystyleone.css" rel="stylesheet"  type="text/css" />
+<!--<link href="style/group.css" rel="stylesheet"  type="text/css" /> -->
 <script  src="scripts/CGWorldlineWeb.js"></script>
 </head>
 
@@ -65,7 +65,7 @@
      <label>
       否
      </label>
-    </textarea>
+   
     </div>
     <div   id="content4"></div>
     <div  id="buttonCenter">
@@ -74,17 +74,6 @@
     </div>
   </div>
 </div>
-<!--实际案例
-假如，在实际中，我们有这么一个案例
-1
-<input type="text" onchange="a(this);" />
-js代码：
-1
-2
-3
-function a(obj){
-    console.log(obj.value);
-}
--->
+
 </body>
 </html>
