--- a/fhy/knowledge.html
+++ b/fhy/knowledge.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-	<title>小组管理申请列表</title>
+	<title>知识</title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="style/team_management.css"/>
+	<link rel="stylesheet" type="text/css" href="style/knowledge.css"/>
 </head>
 
 <body>
@@ -60,31 +60,23 @@
 			</a>
 		</div>
 	</div>
-	<div id="white_big_box">
-		<div class="box_of_applicants">
-			<img class="pic_of_applicants" src="images/login_18.png">
-			<p class="word_of_applicants">
-				纤：能交个朋友么？
-			</p>
-			<form>
-				<input id="bt_yes" type="submit" value="同意" />
-			</form>
-			<form>
-				<input id="bt_no" type="submit" value="拒绝" />
-			</form>
+	<div id="search_box">
+		<div id="search_frame" >
+			<div >
+				<input id="search_frame_text" type="text" name="" max="3" />
+			</div>
+			<img id="search_frame_pic" src="images/knowledgeBase_03.png"/>
+			
 		</div>
-		<div class="box_of_applicants">
-			<img class="pic_of_applicants" src="images/login_18.png">
-			<p class="word_of_applicants">
-				纤：能交个朋友么？
-			</p>
-			<form>
-				<input id="bt_yes" type="submit" value="同意" />
-			</form>
-			<form>
-				<input id="bt_no" type="submit" value="拒绝" />
-			</form>
-		</div>
+	</div>
+	<img id="nav_bt" onmouseover="sub_nav.syle.display" src="images/knowledgeBase_05.png" />
+	<div id="nav_pic_box">
+		<img class="nav_pic" src="images/knowledgeBase_02.png" />
+		<img class="nav_pic" src="images/knowledgeBase_02.png" />
+		<img class="nav_pic" src="images/knowledgeBase_02.png" />
+		<img class="nav_pic" src="images/knowledgeBase_02.png" />
+		<img class="nav_pic" src="images/knowledgeBase_02.png" />
+		<img class="nav_pic" src="images/knowledgeBase_02.png" />
 	</div>
 </body>
 </html>
