--- a/productSearching.html
+++ b/productSearching.html
@@ -64,12 +64,12 @@
 	</div>
 	<div id="product_box">
 		<div id="product_list">
-			<img class="product_pic" src="images/商品.png">
-			<img class="product_pic" src="images/商品.png">
-			<img class="product_pic" src="images/商品.png">
-			<img class="product_pic" src="images/商品.png">
-			<img class="product_pic" src="images/商品.png">
-			<img class="product_pic" src="images/商品.png">
+			<img class="product_pic" src="images/goods.png">
+			<img class="product_pic" src="images/goods.png">
+			<img class="product_pic" src="images/goods.png">
+			<img class="product_pic" src="images/goods.png">
+			<img class="product_pic" src="images/goods.png">
+			<img class="product_pic" src="images/goods.png">
 		</div>
 	</div>
 </body>
