任务通知界面和具体内容界面布局稍微修改了一下

--- a/specificContent.html
+++ b/specificContent.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
 <meta  name="viewport" content="width=device-width,initial-scale=1.0">
 <link href="style/bootstrap.css"  rel="stylesheet"/>
-<link href="style/bootstrap-responsive.css"  rel="stylesheet"/>
+<!-- <link href="style/bootstrap-responsive.css"  rel="stylesheet"/> -->
 <!-- <link href="style/mystyleone.css" rel="stylesheet"  type="text/css" /> -->
 <link href="style/specificContent.css" rel="stylesheet"  type="text/css" />
 </head>
@@ -46,7 +46,7 @@
             </div>
         </div>
       </div>
-    <div class="container">
+    <div  class="container" >
         <div  class="loginContent">
           <div  class="loginContentLeft">
             <img src="images/login_18.png">
@@ -66,8 +66,8 @@
             </div>
           </div>
         </div>
-        <div  id="specificContentImg">
-            <img    src="images/specificContent_03.png" class="img-responsive"/> 
+        <div  id="specificContentImg"  >
+            <img    src="images/specificContent_03.png"   id="specificImg"/> 
         </div>
 
     </div>
