所有的导航布局bug修改

--- a/taskIssue.html
+++ b/taskIssue.html
@@ -32,7 +32,7 @@
                  <li> <a href="＃" ><span>需求</span></a></li>
             </ul>
             <ul class="list-inline  pull-right ">
-                <li><img src="images/login_05.png"/></li>
+                <li  class="liStyle"><img src="images/login_05.png"/></li>
                 <li > <a href="untitle.html" ><span>刘娜</span></a></li>
                 <li > <a href="untitle.html" ><img src="images/login_11.png"/></a></li> 
                 <li > <a href="untitle.html" ><img src="images/login_08.png"/></a></li>
