--- a/armyCreate.html
+++ b/armyCreate.html
@@ -10,7 +10,7 @@
     <link href="style/bootstrap-theme.css"  rel="stylesheet"/>
     <script  src="scripts/CGWorldlineWeb.js"></script>
 </head>
-<body  class="body">
+<body >
     <div class="navbar  navbar-default" id="navBackground">    
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"  data-target=".navbar-responsive-collapse">
@@ -29,8 +29,8 @@
                 <li> <a href="untitle.html" ><span>商店</span></a></li>
                 <li> <a href="＃" ><span>需求</span></a></li>
             </ul>
-            <ul class="list-inline  pull-right ">
-                <li><img src="images/login_05.png"/></li>
+            <ul class="list-inline  pull-right " >
+                <li  class="liStyle"><img src="images/login_05.png"/></li>
                 <li > <a href="untitle.html" ><span>刘娜</span></a></li>
                 <li > <a href="untitle.html" ><img src="images/login_11.png"/></a></li>
                 <li > <a href="untitle.html" ><img src="images/login_08.png"/></a></li>
@@ -38,7 +38,7 @@
             </ul>
         </div>
     </div>
-    <div  class="container">
+    <div  class="container"  id="fontStyle">
     	  <div  class="armyHeadImage">
    			    <img  src="images/headImage.png" />
    		  </div>
