--- a/armyHomePage.html
+++ b/armyHomePage.html
@@ -9,7 +9,7 @@
 <link href="style/bootstrap.css"  rel="stylesheet"/> 
 <script  src="login.js"></script>
 </head>
-<body   id="Body" >
+<body >
 	<div class="navbar  navbar-default" id="navBackground">    
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"  data-target=".navbar-responsive-collapse">
@@ -30,7 +30,7 @@
                  <li> <a href="＃" ><span>需求</span></a></li>
             </ul>
             <ul class="list-inline  pull-right ">
-                <li><img src="images/login_05.png"/></li>
+                <li  class="liStyle"><img src="images/login_05.png"/></li>
                 <li > <a href="untitle.html" ><span>刘娜</span></a></li>
                 <li > <a href="untitle.html" ><img src="images/login_11.png"/></a></li> 
                 <li > <a href="untitle.html" ><img src="images/login_08.png"/></a></li>
