修改了一下图片的文件夹名以及css文件的分离问题

--- a/armyCreate.html
+++ b/armyCreate.html
@@ -30,17 +30,17 @@
                 <li> <a href="＃" ><span>需求</span></a></li>
             </ul>
             <ul class="list-inline  pull-right " >
-                <li  class="liStyle"><img src="images/login_05.png"/></li>
+                <li  class="liStyle"><img src="img/login_05.png"/></li>
                 <li > <a href="untitle.html" ><span>刘娜</span></a></li>
-                <li > <a href="untitle.html" ><img src="images/login_11.png"/></a></li>
-                <li > <a href="untitle.html" ><img src="images/login_08.png"/></a></li>
+                <li > <a href="untitle.html" ><img src="img/login_11.png"/></a></li>
+                <li > <a href="untitle.html" ><img src="img/login_08.png"/></a></li>
                 <li > <a href="untitle.html" ><span>退出</span></a></li>
             </ul>
         </div>
     </div>
     <div  class="container"  id="fontStyle">
     	  <div  class="armyHeadImage">
-   			    <img  src="images/headImage.png" />
+   			    <img  src="img/headImage.png" />
    		  </div>
    	    <div  class="armyName">
    			    <div class="armyNameText">名称:</div> 
@@ -50,7 +50,7 @@
             <!--<input  type="text"   placeholder="名称:战魂"  class="inputForm"/>-->
     	  </div>
    	    <div  class="armyAdd">
-   			    邀请：<a  href="#"><img src="images/invitation.png"／></a>       
+   			    邀请：<a  href="#"><img src="img/invitation.png"／></a>       
    	    </div>
         <div  class="armyCheckbox">
              <div  id="armyCheckboxText">是否公开：</div>
