--- a/armyHomePage.html
+++ b/armyHomePage.html
@@ -30,10 +30,10 @@
                  <li> <a href="＃" ><span>需求</span></a></li>
             </ul>
             <ul class="list-inline  pull-right ">
-                <li  class="rightNavliDivStyle"><img src="images/login_05.png"/></li>
+                <li  class="rightNavliDivStyle"><img src="img/login_05.png"/></li>
                 <li > <a href="untitle.html" ><span>刘娜</span></a></li>
-                <li > <a href="untitle.html" ><img src="images/login_11.png"/></a></li> 
-                <li > <a href="untitle.html" ><img src="images/login_08.png"/></a></li>
+                <li > <a href="untitle.html" ><img src="img/login_11.png"/></a></li> 
+                <li > <a href="untitle.html" ><img src="img/login_08.png"/></a></li>
                 <li > <a href="untitle.html" ><span>退出</span></a></li>
 
             </ul>
@@ -42,7 +42,7 @@
     <div class="container"  id="fontStyle">
 		<div class="morePageInformationShowDiv">                       <!-- 此处用到的类在多个页面都在用，所以它在repeatUsedStyle.css中-->	
         	<div  id="userHeadImage">
-        		<img  src="images/headImage.png"/>
+        		<img  src="img/headImage.png"/>
         	</div>	
             <div   id="userInformation">
 	            <div class="informationContextName">名称:战魂</div>
