--- a/goodsIssue.html
+++ b/goodsIssue.html
@@ -27,10 +27,10 @@
                  <li> <a href="＃" ><span>需求</span></a></li>
             </ul>
             <ul class="list-inline  pull-right ">
-                <li><img src="images/login_05.png"/></li>
+                <li  class="liStyle"><img src="img/login_05.png"/></li>
                 <li > <a href="untitle.html" ><span>刘娜</span></a></li>
-                <li > <a href="untitle.html" ><img src="images/login_11.png"/></a></li>
-                <li > <a href="untitle.html" ><img src="images/login_08.png"/></a></li>
+                <li > <a href="untitle.html" ><img src="img/login_11.png"/></a></li>
+                <li > <a href="untitle.html" ><img src="img/login_08.png"/></a></li>
                 <li > <a href="untitle.html" ><span>退出</span></a></li>
 
             </ul>
@@ -38,15 +38,15 @@
     </div>
     <div  class="goodsIssueContent"   id="goodsIssueFontCenterStyle" >
         <div   class="goodsIssueLeftContentDiv">
-            <img   src="images/goods.png"  id="goodsIssueImage"  class="img-responsive"/>    
+            <img   src="img/goods.png"  id="goodsIssueImage"  class="img-responsive"/>    
         </div>
         <div   class="goodsIssueRightContentDiv">
             <div class="goodsIssueRightContentDivOne">
                 <div  class="goodsIssueRightContentImageDiv">
-                    <img  src="images/group_06.png"  />
+                    <img  src="img/group_06.png"  />
                 </div>
                 <div   class="goodsIssueRightContentAddDiv">
-                    <img  src="images/invitation.png"   id="goodsImage" />
+                    <img  src="img/invitation.png"   id="goodsImage" />
                 </div>
             </div>  
            
