--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>登陆</title>
+	<title>个人主页</title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="style/homepage.css"/>
 </head>
@@ -65,7 +65,7 @@
 	</div>
 	<div class="usertable_big_box">
 		<div class="usertable_box">
-			<img class="usertable_pic" src="images/login_18.png" />
+			<img class="usertable_pic" src="img/login_18.png" />
 			<div class="usertable_text_box">
 				<p class="usertable_head">
 					Sketch mac是一款很新颖的适量设图软件 
@@ -77,7 +77,7 @@
 					菜单、调色板等功能，</br>
 					还完美支持布尔运算，符号，和强大的标尺,是难得的一款实用矢量绘图软件。
 				</p>
-				<img class="usertable_time_pic" src="images/login_03.png">
+				<img class="usertable_time_pic" src="img/login_03.png">
 				<p class="usertable_time">
 					2014.11.11 11:11
 				</p>
@@ -86,7 +86,7 @@
 	</div>
 	<div class="usertable_big_box">
 		<div class="usertable_box">
-			<img class="usertable_pic" src="images/login_18.png" />
+			<img class="usertable_pic" src="img/login_18.png" />
 			<div class="usertable_text_box">
 				<p class="usertable_head">
 					Sketch mac是一款很新颖的适量设图软件 
@@ -94,7 +94,7 @@
 				<p class="usertable_paragraph">
 					软件页面清爽、简洁，功能多样强大。可以免费使用空间、菜单、调色板等功能，还完美支持布尔运算，符号，和强大的标尺,是难得的一款实用矢量绘图软件。
 				</p>
-				<img class="usertable_time_pic" src="images/login_03.png">
+				<img class="usertable_time_pic" src="img/login_03.png">
 				<p class="usertable_time">
 					2014.11.11 11:11
 				</p>
@@ -103,7 +103,7 @@
 	</div>
 		<div class="usertable_big_box">
 		<div class="usertable_box">
-			<img class="usertable_pic" src="images/login_18.png" />
+			<img class="usertable_pic" src="img/login_18.png" />
 			<div class="usertable_text_box">
 				<p class="usertable_head">
 					Sketch mac是一款很新颖的适量设图软件 
@@ -115,7 +115,7 @@
 					菜单、调色板等功能，</br>
 					还完美支持布尔运算，符号，和强大的标尺,是难得的一款实用矢量绘图软件。
 				</p>
-				<img class="usertable_time_pic" src="images/login_03.png">
+				<img class="usertable_time_pic" src="img/login_03.png">
 				<p class="usertable_time">
 					2014.11.11 11:11
 				</p>
@@ -125,7 +125,7 @@
 	<div id="bt_more_box">
 			<input class="bt_more" type="submit" value="更多" />
 	</div>
-	<div class="footer">
+	<!--<div class="footer">
 		<div class="footer_box">
 			<p class="footer_text_left">关于我们</p>
 			<p class="footer_text_left">服务项目</p>
@@ -134,6 +134,6 @@
 			<p class="footer_text_left">友情链接</p>
 			<p class="footer_text_right">版权所有Copt23456-456 XX有限公司</p>
 		</div>	
-	</div>
+	</div>-->
 </body>
 </html>
