--- a/knowledge.html
+++ b/knowledge.html
@@ -57,10 +57,10 @@
 				</a>
 			</div>
 			<a href="#">	
-				<img id="banner_right_pic_settings" src="images/login_08.png" />
+				<img id="banner_right_pic_settings" src="img/login_08.png" />
 			</a>
 			<a href="#">	
-				<img id="banner_right_pic_email" src="images/login_11.png" />
+				<img id="banner_right_pic_email" src="img/login_11.png" />
 			</a>
 			<div class="banner_right_text">
 				<a class="banner_a" href="#">
@@ -68,7 +68,7 @@
 				</a>
 			</div>
 			<a href="#">
-				<img id="banner_right_pic_head" src="images/login_05.png" />
+				<img id="banner_right_pic_head" src="img/login_05.png" />
 			</a>
 		</div>
 	</div>
@@ -77,26 +77,26 @@
 			<div >
 				<input id="search_frame_text" type="text" name="" max="3" />
 			</div>
-			<img id="search_frame_pic" src="images/knowledgeBase_03.png"/>
+			<img id="search_frame_pic" src="img/knowledgeBase_03.png"/>
 			
 		</div>
 	</div>
 	<div id="nav_big_box" >
 		<div id="nav_box">
-			<img id="nav_bt"  src="images/knowledgeBase_05.png" />
+			<img id="nav_bt"  src="img/knowledgeBase_05.png" />
 			<div id="nav_pic_box">
-				<img class="nav_pic" src="images/knowledgeBase_02.png" />
-				<img class="nav_pic" src="images/knowledgeBase_02.png" />
-				<img class="nav_pic" src="images/knowledgeBase_02.png" />
-				<img class="nav_pic" src="images/knowledgeBase_02.png" />
-				<img class="nav_pic" src="images/knowledgeBase_02.png" />
-				<img class="nav_pic" src="images/knowledgeBase_02.png" />
+				<img class="nav_pic" src="img/knowledgeBase_02.png" />
+				<img class="nav_pic" src="img/knowledgeBase_02.png" />
+				<img class="nav_pic" src="img/knowledgeBase_02.png" />
+				<img class="nav_pic" src="img/knowledgeBase_02.png" />
+				<img class="nav_pic" src="img/knowledgeBase_02.png" />
+				<img class="nav_pic" src="img/knowledgeBase_02.png" />
 			</div>
 		</div>
 	</div>
 	<div class="usertable_big_box">
 		<div class="usertable_box">
-			<img class="usertable_pic" src="images/login_18.png" />
+			<img class="usertable_pic" src="img/login_18.png" />
 			<div class="usertable_text_box">
 				<p class="usertable_head">
 					Sketch mac是一款很新颖的适量设图软件 
@@ -108,7 +108,7 @@
 					菜单、调色板等功能，</br>
 					还完美支持布尔运算，符号，和强大的标尺,是难得的一款实用矢量绘图软件。
 				</p>
-				<img class="usertable_time_pic" src="images/login_03.png">
+				<img class="usertable_time_pic" src="img/login_03.png">
 				<p class="usertable_time">
 					2014.11.11 11:11
 				</p>
@@ -117,7 +117,7 @@
 	</div>
 	<div class="usertable_big_box">
 		<div class="usertable_box">
-			<img class="usertable_pic" src="images/login_18.png" />
+			<img class="usertable_pic" src="img/login_18.png" />
 			<div class="usertable_text_box">
 				<p class="usertable_head">
 					Sketch mac是一款很新颖的适量设图软件 
@@ -125,7 +125,7 @@
 				<p class="usertable_paragraph">
 					软件页面清爽、简洁，功能多样强大。可以免费使用空间、菜单、调色板等功能，还完美支持布尔运算，符号，和强大的标尺,是难得的一款实用矢量绘图软件。
 				</p>
-				<img class="usertable_time_pic" src="images/login_03.png">
+				<img class="usertable_time_pic" src="img/login_03.png">
 				<p class="usertable_time">
 					2014.11.11 11:11
 				</p>
@@ -134,7 +134,7 @@
 	</div>
 		<div class="usertable_big_box">
 		<div class="usertable_box">
-			<img class="usertable_pic" src="images/login_18.png" />
+			<img class="usertable_pic" src="img/login_18.png" />
 			<div class="usertable_text_box">
 				<p class="usertable_head">
 					Sketch mac是一款很新颖的适量设图软件 
@@ -146,7 +146,7 @@
 					菜单、调色板等功能，</br>
 					还完美支持布尔运算，符号，和强大的标尺,是难得的一款实用矢量绘图软件。
 				</p>
-				<img class="usertable_time_pic" src="images/login_03.png">
+				<img class="usertable_time_pic" src="img/login_03.png">
 				<p class="usertable_time">
 					2014.11.11 11:11
 				</p>
