--- a/login.html
+++ b/login.html
@@ -45,10 +45,10 @@
 				</a>
 			</div>
 			<a href="#">	
-				<img id="banner_right_pic_settings" src="images/login_08.png" />
+				<img id="banner_right_pic_settings" src="img/login_08.png" />
 			</a>
 			<a href="#">	
-				<img id="banner_right_pic_email" src="images/login_11.png" />
+				<img id="banner_right_pic_email" src="img/login_11.png" />
 			</a>
 			<div class="banner_right_text">
 				<a class="banner_a" href="#">
@@ -56,13 +56,13 @@
 				</a>
 			</div>
 			<a href="#">
-				<img id="banner_right_pic_head" src="images/login_05.png" />
+				<img id="banner_right_pic_head" src="img/login_05.png" />
 			</a>
 		</div>
 	</div>
 	<div class="usertable_big_box">
 		<div class="usertable_box">
-			<img class="usertable_pic" src="images/login_18.png" />
+			<img class="usertable_pic" src="img/login_18.png" />
 			<div class="usertable_text_box">
 				<p class="usertable_head">
 					Sketch mac是一款很新颖的适量设图软件 
@@ -74,7 +74,7 @@
 					菜单、调色板等功能，</br>
 					还完美支持布尔运算，符号，和强大的标尺,是难得的一款实用矢量绘图软件。
 				</p>
-				<img class="usertable_time_pic" src="images/login_03.png">
+				<img class="usertable_time_pic" src="img/login_03.png">
 				<p class="usertable_time">
 					2014.11.11 11:11
 				</p>
@@ -83,7 +83,7 @@
 	</div>
 	<div class="usertable_big_box">
 		<div class="usertable_box">
-			<img class="usertable_pic" src="images/login_18.png" />
+			<img class="usertable_pic" src="img/login_18.png" />
 			<div class="usertable_text_box">
 				<p class="usertable_head">
 					Sketch mac是一款很新颖的适量设图软件 
@@ -91,7 +91,7 @@
 				<p class="usertable_paragraph">
 					软件页面清爽、简洁，功能多样强大。可以免费使用空间、菜单、调色板等功能，还完美支持布尔运算，符号，和强大的标尺,是难得的一款实用矢量绘图软件。
 				</p>
-				<img class="usertable_time_pic" src="images/login_03.png">
+				<img class="usertable_time_pic" src="img/login_03.png">
 				<p class="usertable_time">
 					2014.11.11 11:11
 				</p>
@@ -100,7 +100,7 @@
 	</div>
 		<div class="usertable_big_box">
 		<div class="usertable_box">
-			<img class="usertable_pic" src="images/login_18.png" />
+			<img class="usertable_pic" src="img/login_18.png" />
 			<div class="usertable_text_box">
 				<p class="usertable_head">
 					Sketch mac是一款很新颖的适量设图软件 
@@ -112,7 +112,7 @@
 					菜单、调色板等功能，</br>
 					还完美支持布尔运算，符号，和强大的标尺,是难得的一款实用矢量绘图软件。
 				</p>
-				<img class="usertable_time_pic" src="images/login_03.png">
+				<img class="usertable_time_pic" src="img/login_03.png">
 				<p class="usertable_time">
 					2014.11.11 11:11
 				</p>
