--- a/myInformationPage.html
+++ b/myInformationPage.html
@@ -9,7 +9,7 @@
 <body> 
          <div id="morePageInformationShowDiv">
             <div  id="userHeadImage">
-                <img  src="images/headImage.png"/>
+                <img  src="img/headImage.png"/>
             </div>
             <div id="userInformation">
                 <div class="informationContextName"> 用户名：芊</div>
@@ -75,13 +75,13 @@
         </div>
         <div  id="goodsList">
             <div class="goodsListImage">
-                <img  src="images/group_06.png"  id="goodsImage"/> 
+                <img  src="img/group_06.png"  id="goodsImage"/> 
             </div>
             <div  class="goodsListText">
                 可爱布丁
             </div>
             <div class="goodsListImage">
-                <img  src="images/group_06.png"/> 
+                <img  src="img/group_06.png"/> 
             </div>
             <div  class="goodsListText">
                 可爱布丁
