--- a/newPost.html
+++ b/newPost.html
@@ -7,7 +7,7 @@
 
 <link href="style/bootstrap.css"  rel="stylesheet"/>
 <link href="style/bootstrap-responsive.css"  rel="stylesheet"/>
-<link href="style/mystyleone.css" rel="stylesheet"  type="text/css" />
+<link href="style/newPost.css" rel="stylesheet"  type="text/css" />
 </head>
 <body>
     
@@ -31,10 +31,10 @@
                 <li> <a href="＃" ><span>需求</span></a></li>
             </ul>
             <ul class="list-inline  pull-right ">
-                <li><img src="images/login_05.png"/></li>
+                <li  class="liStyle"><img src="img/login_05.png"/></li>
                 <li > <a href="untitle.html" ><span>刘娜</span></a></li>
-                <li > <a href="untitle.html" ><img src="images/login_11.png"/></a></li>
-                <li > <a href="untitle.html" ><img src="images/login_08.png"/></a></li>
+                <li > <a href="untitle.html" ><img src="img/login_11.png"/></a></li>
+                <li > <a href="untitle.html" ><img src="img/login_08.png"/></a></li>
                 <li > <a href="untitle.html" ><span>退出</span></a></li>
 
             </ul>
