--- a/productSearching.html
+++ b/productSearching.html
@@ -50,7 +50,7 @@
 				</a>
 			</div>
 			<a href="#">
-				<img id="banner_right_pic_head" src="images/headImage.png" />
+				<img id="banner_right_pic_head" src="img/headImage.png" />
 			</a>
 		</div>
 	</div>
@@ -59,17 +59,17 @@
 			<div >
 				<input id="search_frame_text" type="text" name="" max="3" />
 			</div>
-			<img id="search_frame_pic" src="images/knowledgeBase_03.png"/>
+			<img id="search_frame_pic" src="img/knowledgeBase_03.png"/>
 		</div>
 	</div>
 	<div id="product_box">
 		<div id="product_list">
-			<img class="product_pic" src="images/goods.png">
-			<img class="product_pic" src="images/goods.png">
-			<img class="product_pic" src="images/goods.png">
-			<img class="product_pic" src="images/goods.png">
-			<img class="product_pic" src="images/goods.png">
-			<img class="product_pic" src="images/goods.png">
+			<img class="product_pic" src="img/goods.png">
+			<img class="product_pic" src="img/goods.png">
+			<img class="product_pic" src="img/goods.png">
+			<img class="product_pic" src="img/goods.png">
+			<img class="product_pic" src="img/goods.png">
+			<img class="product_pic" src="img/goods.png">
 		</div>
 	</div>
 </body>
