--- a/specificContent.html
+++ b/specificContent.html
@@ -39,7 +39,7 @@
                     <label ><span>密码</span></label>  
                     <input type="text"    class="form-control"   id="userPassword" />
 
-                    <button type="submit"   id="loginButton"  class="btn"  click="login()"><span>登录</span></button>
+                    <button type="submit"   id="loginButton"  class="btn"><span>登录</span></button>
                     <button type="submit"  id="registerButton" class="btn" ><span>注册</span></button>
 
                 </div>
@@ -49,7 +49,7 @@
     <div  class="container" >
         <div  class="loginContent">
           <div  class="loginContentLeft">
-            <img src="images/login_18.png">
+            <img src="img/login_18.png">
           </div>
           <div  class="loginContentRight">
             <div  class="loginContentTitle">
@@ -59,7 +59,7 @@
               华盛顿积极思考思念就是看到口袋里的快快打开了打开就大哭大华盛顿积极思考思念就是看到口袋里的快快打开了打开就大哭大华盛顿积极思考思
             </div>
             <div  class="dataTimeImage">
-                <img src="images/login_03.png" />
+                <img src="img/login_03.png" />
             </div> 
             <div class="dataTimeSpecialTime">
                 2014.11.11  11:11
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div  id="specificContentImg"  >
-            <img    src="images/specificContent_03.png"   id="specificImg"/> 
+            <img    src="img/specificContent_03.png"   id="specificImg"/> 
         </div>
 
     </div>
