--- a/team_manager.html
+++ b/team_manager.html
@@ -44,10 +44,10 @@
 				</a>
 			</div>
 			<a href="#">	
-				<img id="banner_right_pic_settings" src="images/login_08.png" />
+				<img id="banner_right_pic_settings" src="img/login_08.png" />
 			</a>
 			<a href="#">	
-				<img id="banner_right_pic_email" src="images/login_11.png" />
+				<img id="banner_right_pic_email" src="img/login_11.png" />
 			</a>
 			<div class="banner_right_text">
 				<a class="banner_a" href="#">
@@ -55,13 +55,13 @@
 				</a>
 			</div>
 			<a href="#">
-				<img id="banner_right_pic_head" src="images/login_05.png" />
+				<img id="banner_right_pic_head" src="img/login_05.png" />
 			</a>
 		</div>
 	</div>
 	<div id="white_big_box">
 		<div class="box_of_applicants">
-			<img class="pic_of_applicants" src="images/login_18.png">
+			<img class="pic_of_applicants" src="img/login_18.png">
 			<p class="word_of_applicants">
 				纤：能交个朋友么？
 			</p>
@@ -73,7 +73,7 @@
 			</form>
 		</div>
 		<div class="box_of_applicants">
-			<img class="pic_of_applicants" src="images/login_18.png">
+			<img class="pic_of_applicants" src="img/login_18.png">
 			<p class="word_of_applicants">
 				纤：能交个朋友么？
 			</p>
