--- a/armyManagement.html
+++ b/armyManagement.html
@@ -50,7 +50,7 @@
 				</a>
 			</div>
 			<a href="#">
-				<img id="banner_right_pic_head" src="images/headImage.png" />
+				<img id="banner_right_pic_head" src="img/headImage.png" />
 			</a>
 		</div>
 	</div>
@@ -59,27 +59,27 @@
 			<div >
 				<input id="search_frame_text" type="text" name="" max="3" />
 			</div>
-			<img id="search_frame_pic" src="images/knowledgeBase_03.png"/>
+			<img id="search_frame_pic" src="img/knowledgeBase_03.png"/>
 		</div>
 	</div>
 	<div id="content_box">
 		<div id="content_white_background">
 			<div class="content_list">
-				<img class="content_head_pic" src="images/headImage.png">
+				<img class="content_head_pic" src="img/headImage.png">
 				<p class="content_text" >:  芊</p>
-				<img class="content_right_pic" src="images/person3.png">
+				<img class="content_right_pic" src="img/person3.png">
 			</div>
 			<div class="content_list">
-				<img class="content_head_pic" src="images/headImage.png">
+				<img class="content_head_pic" src="img/headImage.png">
 				<p class="content_text" >:  芊</p>
-				<img class="content_right_pic" src="images/person.png">
+				<img class="content_right_pic" src="img/person.png">
 			</div>
 			<div class="content_list">
-				<img class="content_head_pic" src="images/headImage.png">
+				<img class="content_head_pic" src="img/headImage.png">
 				<p class="content_text" >:  芊</p>
 			</div>
 			<div class="content_list">
-				<img class="content_head_pic" src="images/headImage.png">
+				<img class="content_head_pic" src="img/headImage.png">
 				<p class="content_text" >:  芊</p>
 			</div>
 
