--- a/group.html
+++ b/group.html
@@ -6,7 +6,7 @@
 <meta  name="viewport" content="width=device-width,initial-scale=1.0">
 <link href="style/bootstrap.css"  rel="stylesheet"/>
 <link href="style/bootstrap-theme.css"  rel="stylesheet"/>
-<link href="style/mystyleone.css" rel="stylesheet"  type="text/css" />
+<link href="style/group.css" rel="stylesheet"  type="text/css" />
 <!--<link href="style/group.css" rel="stylesheet"  type="text/css" /> -->
 <script  src="scripts/CGWorldlineWeb.js"></script>
 </head>
@@ -34,10 +34,10 @@
                  <li> <a href="＃" ><span>需求</span></a></li>
            </ul>
             <ul class="list-inline  pull-right ">
-                <li  class="liStyle"><img src="images/login_05.png"/></li>
+                <li  class="liStyle"><img src="img/login_05.png"/></li>
                 <li > <a href="untitle.html" ><span>刘娜</span></a></li>
-                <li > <a href="untitle.html" ><img src="images/login_11.png"/></a></li>
-                <li > <a href="untitle.html" ><img src="images/login_08.png"/></a></li>
+                <li > <a href="untitle.html" ><img src="img/login_11.png"/></a></li>
+                <li > <a href="untitle.html" ><img src="img/login_08.png"/></a></li>
                 <li > <a href="untitle.html" ><span>退出</span></a></li>
 
             </ul>
@@ -47,7 +47,7 @@
 <div class="container">
   <div  class="form-horizontal"  role="form"  id="myForm">
     <div  class="form-group">
-      <textarea  class="form-control"   placeholder="小组名称"  id="textButton1"   onchange="Change()"></textarea>
+      <textarea  class="form-control"   placeholder="小组名称"  id="textButton1"></textarea>
     </div>
     <div  id="content2"></div>
     <label>邀请好友</label>
