--- a/userCancel.html
+++ b/userCancel.html
@@ -4,7 +4,7 @@
 <title>用户注销</title>
 <meta charset="utf-8" />
 <meta  name="viewport" content="width=device-width,initial-scale=1.0">
-<link href="style/mystyleone.css" rel="stylesheet"  type="text/css" />
+<link href="style/userCancel.css" rel="stylesheet"  type="text/css" />
 <link href="style/bootstrap.css"  rel="stylesheet"/>
 <link href="style/bootstrap-responsive.css"  rel="stylesheet"/>
 <script  src="scripts/CGWorldlineWeb.js"></script>
@@ -54,11 +54,11 @@
     <div  class="container">
         <div  class="titleContent">CGWorldline  还有好多玩的事哦!</div>
         <div  id="showContent">
-            <div class="userCanelImg1"><img src="images/userCancel_06.png"  /><a  href="＃"><span class="blackFont">知识库</span></a></div>
-            <div  class="userCanelImg2"><img src="images/userCancel_03.png" /><a  href="＃"><span class="blackFont">数据分析</span></a></div> 
-            <div  class="userCanelImg2"><img src="images/userCancel_09.png"  /><a  href="＃"><span class="blackFont">新闻</span></a></div> 
-            <div  class="userCanelImg2"> <img src="images/userCancel_11.png"  /><a  href="＃"><span class="blackFont">需求 </span></a></div>  
-            <div  class="userCanelImg2"> <img src="images/userCancel_13.png" /><a  href="＃"><span class="blackFont">小组</span></a></div>
+            <div class="userCanelImg1"><img src="img/userCancel_06.png"  /><a  href="＃"><span class="blackFont">知识库</span></a></div>
+            <div  class="userCanelImg2"><img src="img/userCancel_03.png" /><a  href="＃"><span class="blackFont">数据分析</span></a></div> 
+            <div  class="userCanelImg2"><img src="img/userCancel_09.png"  /><a  href="＃"><span class="blackFont">新闻</span></a></div> 
+            <div  class="userCanelImg2"> <img src="img/userCancel_11.png"  /><a  href="＃"><span class="blackFont">需求 </span></a></div>  
+            <div  class="userCanelImg2"> <img src="img/userCancel_13.png" /><a  href="＃"><span class="blackFont">小组</span></a></div>
 
         </div>
         <div  class="titleContent"> 注销后您的一切个人资料不在显示，所有发言显示为已注销用户</div>
