--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,7 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
-	<title>登陆</title>
+	<title>个人主页</title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="style/homepage.css"/>
 </head>
