(#2)(#3)已修改好，另外修改了全部界面的导航字体大小和背景颜色

--- a/homepage.html
+++ b/homepage.html
@@ -39,27 +39,30 @@
 					需求
 				</a>
 			</div>
-			<div class="banner_right_text">
-				<a class="banner_a" href="#">
-					注册
-				</a>
-			</div>
-			<div class="banner_right_text">
-				<a class="banner_a" href="#">
-					登陆
-				</a>
-			</div>
-			<input type="text"    class="banner_input" />
-			<div class="banner_right_text">
-				<a class="banner_a" href="#">
-					密码
-				</a>
-			</div>
-			<input type="text"    class="banner_input" />
-			<div class="banner_right_text">
-				<a class="banner_a" href="#">
-					用户名
-				</a>
+
+			<div id="banner_right_box" >
+				<div class="banner_right_text">
+					<p>
+						用户名
+					</p>
+				</div>
+				<input type="text"    class="banner_input" />
+				<div class="banner_right_text">
+					<p>	
+						密码
+					</p>
+				</div>
+				<input type="password"  class="banner_input" />
+				<div class="banner_right_text">
+					<a class="banner_a" href="#">
+						登陆
+					</a>
+				</div>
+				<div class="banner_right_text">
+					<a class="banner_a" href="#">
+						注册
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
