--- a/taskTracking.html
+++ b/taskTracking.html
@@ -7,13 +7,14 @@
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript"> 
 		$(document).ready(function(){
+			
 			var divwidth = $(".time_axis_list_box").height();
 			var htop = divwidth/2;
-			$('.axis_horizontal').css("margin-top",htop+"px");
-			$('.axis_vertical').height(divwidth+'px');
+			var $axis = $(".time_axis_list_box");
+			$(".time_axis_list_box").children('.axis_horizontal').css("margin-top",htop+"px");
+			$(".time_axis_list_box").children('.axis_vertical').height(divwidth+'px');
 			var ptop = divwidth/2-9;
-			$('.axis_middle_pic').css("top",ptop+"px");
-
+			$(".time_axis_list_box").children('.axis_middle_pic').css("top",ptop+"px");
 		});
 	</script>
 </head>
@@ -56,10 +57,10 @@
 				</a>
 			</div>
 			<a href="#">	
-				<img id="banner_right_pic_settings" src="images/login_08.png" />
+				<img id="banner_right_pic_settings" src="img/login_08.png" />
 			</a>
 			<a href="#">	
-				<img id="banner_right_pic_email" src="images/login_11.png" />
+				<img id="banner_right_pic_email" src="img/login_11.png" />
 			</a>
 			<div class="banner_right_text">
 				<a class="banner_a" href="#">
@@ -67,7 +68,7 @@
 				</a>
 			</div>
 			<a href="#">
-				<img id="banner_right_pic_head" src="images/login_05.png" />
+				<img id="banner_right_pic_head" src="img/login_05.png" />
 			</a>
 		</div>
 	</div>
@@ -193,6 +194,7 @@
 					</p>
 					<p>
 						提交说明：简单、易学、实用
+						<br/><br/>hfldshfl<br/><br/><br/><br/><br/>
 					</p>
 					<p class="time_axis_float_text">
 						附件
